--- a/css/style.css
+++ b/css/style.css
@@ -21,15 +21,15 @@ p {font-weight: 200; font-size: 20px;}
 
 footer .inline-list li {padding-right: 40px;}
 footer {margin: 0 auto; position: absolute; bottom: 0px; padding: 40px 0; width: 600px;}
-#link1 {
+#link1 a {
   color: red;
   text-decoration: none;
 }
-#link2 {
+#link2 a {
   color: blue;
   text-decoration: none;
 }
-#link3 {
+#link3 a {
   color: green;
   text-decoration: none;
 }
