--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body, html {height: 100%;}
 .wrapper {box-sizing: border-box; background: #fff; box-shadow: 0 0 5px #888; box-shadow: 0 0 5px #888; height: 100%; overflow: auto; }
 
 
-a {color: #777; text-decoration: none; border-bottom: 1px solid #CCFF26;}
+a {color: #777; text-decoration: none;}
 a:hover {color: #0068FF}
 p {font-weight: 200; font-size: 20px;}
 
