--- a/css/style.css
+++ b/css/style.css
@@ -16,20 +16,8 @@ p {font-weight: 200; font-size: 20px;}
 .meta {text-transform: uppercase; font-family: Courier New, Quicksand, "Helvetica Neue", "Arial", sans-serif; font-size: 40px; letter-spacing: .15em;}
 .meta a:hover {color: #333;}
 
-.inline-list {list-style: none; margin: 0; padding: 0;}
+.inline-list a {list-style: none; margin: 0; padding: 0; color: green;}
 .inline-list li {display: inline-block;}
 
 footer .inline-list li {padding-right: 40px;}
 footer {margin: 0 auto; position: absolute; bottom: 0px; padding: 40px 0; width: 600px;}
-#link1 a {
-  color: red;
-  text-decoration: none;
-}
-#link2 a {
-  color: blue;
-  text-decoration: none;
-}
-#link3 a {
-  color: green;
-  text-decoration: none;
-}
